--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,18 +12,19 @@
         android:layout_width="match_parent"
         android:layout_margin="10dp"
         android:background="@drawable/rect"
-        android:layout_height="300dp"/>
+        android:layout_height="250dp"/>
 
     <TextView
         android:id="@+id/display_txt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:padding="5dp"
         android:textStyle="bold"
         android:textColor="@android:color/holo_orange_dark"
         android:text=""
         android:background="@drawable/rect"
         android:layout_below="@+id/image_view"
+        android:textIsSelectable="true"
         android:layout_margin="20dp"
         android:textSize="18dp" />
 
