all text in image taken

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,9 @@
         android:layout_height="200dp"
         android:padding="5dp"
         android:textStyle="bold"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:textColor="@android:color/holo_orange_dark"
         android:text=""
         android:background="@drawable/rect"
